app/assets/stylesheets/workflows.scss
#cy {
  height: 650px;
  width: 100%;
}

.workflow-toolbar-wrapper {
  background-color: #DDDDDD;
  padding: 5px;
  border-radius: 4px;
}

#workflow-toolbar {
  text-align: right;
  margin-bottom: 5px;
}

#workflow-status-bar {
  line-height: 34px;
  //margin-bottom: 10px;
  padding: 5px 10px;
  background: #efefef;
  border-radius: 4px;
}

#workflow-status-message {
  float: left;
  background-color: $alert-info-bg;
  padding: 6px;
  border: 1px solid $alert-info-border;
  border-radius: 4px;
  color: $alert-info-text;
}

/* Hide the border from the predefined colour selector */
.simplecolorpicker span.color:hover, .simplecolorpicker span.color[data-selected],
.simplecolorpicker span.color[data-selected]:hover {
  border-color: transparent !important;
}

#main-container.workflows-container {
  padding: 0px 10px 10px 10px;
  max-width: none;
}

.workflow-diagram-wrapper {
  border: 1px solid #ccc;
  padding: 10px;
  margin-bottom: 10px;
  border-radius: 4px;
}

.workflow-diagram-container {
  border: 1px solid #ccc;
  display: flex;
}

#workflow-diagram-sidebar {
  flex-shrink: 0;
  width: 300px;
  border-left: 1px solid #ccc;
  background-color: #fff;
  z-index: 10;

  img {
    max-width: 100%;
  }
}

#workflow-diagram-content {
  flex-grow: 1;
}

#workflow-diagram-sidebar-desc {
  padding: 10px;
}

.split {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;

  overflow-y: auto;
  overflow-x: hidden;
}

.gutter {
  background-color: #eee;
  border-left: 1px solid #ccc;
  background-repeat: no-repeat;
  background-position: 50%;
  z-index: 11;
}

.gutter.gutter-horizontal {
  background-image: url('grips/vertical.png');
  cursor: ew-resize;
}

.gutter.gutter-vertical {
  background-image: url('grips/horizontal.png');
  cursor: ns-resize;
}

.associated-resource {
  padding-bottom: 10px;
  border-bottom: 1px solid #ccc;
  margin-bottom: 10px;
}

.delete-associated-resource {
  @include delete-cross;
}

#node-modal, #edge-modal {
  z-index: 100000;
}

